--- a/5_experimental_evaluation/results.tex
+++ b/5_experimental_evaluation/results.tex
@@ -16,7 +16,7 @@ Utilizando os \textit{benchmarks} propostos, os experimentos têm os seguintes ob
 
 \section{Configuração Experimental e Descrição dos \textit{Benchmarks}}\label{sec:experimental-setup}
 
-Os experimentos foram conduzidos em máquinas com diferentes configurações, para acelerar a geração dos resultados. Parte foi executada em um processador Intel Core i$7$ -- $4500$ $1$.$8$GHz, com $32$ GB de RAM e executando sistema operacional Linux Mint $64$-bits. Outra parte foi executada em um processador Intel Core i$7$ -- $4500$ $1$.$8$GHz, com $16$ GB de RAM e executando sistema operacional Linux Ubuntu Server $64$-bits. Uma outra parte foi conduzida em um processador Intel Core i$7$ -- $7700$ $3$.$6$GHz, com $32$ GB de RAM e executando sistema operacional Linux Ubuntu $64$-bits. A ultima parte foi obtida em um processador Intel Core i$7$ -- $4500$ $1$.$8$Ghz, com $16$ GB de RAM e executando sistema operacional Linux Ubuntu $64$-bits.
+Os experimentos foram conduzidos em máquinas com diferentes configurações, para acelerar a geração dos resultados. Parte foi executada em um processador Intel Core i$7$ -- $4500$ $1$.$8$GHz, com $32$ GB de RAM e executando sistema operacional Linux Mint $64$-bits. Outra parte foi executada em um processador Intel Core i$7$ -- $4500$ $1$.$8$GHz, com $16$ GB de RAM e executando sistema operacional Linux Ubuntu Server $64$-bits. Uma outra parte foi conduzida em um processador Intel Core i$7$ -- $7700$ $3$.$6$GHz, com $32$ GB de RAM e executando sistema operacional Linux Ubuntu $64$-bits. A ultima parte foi obtida em um processador Intel Core i$7$ -- $8700$ $3$.$2$GHz, com $16$ GB de RAM e executando sistema operacional Linux Ubuntu $64$-bits.
 
 Os benchmarks com os sistemas de controle usados para avaliar a abordagem proposta são descritos a seguir. Em particular, os benchmarks usados neste trabalho estão disponíveis na Tabela, e fornece informações sobre as matrizes de espaço de estados $ \mathbf{A} $, $ \mathbf{B} $ e $ \mathbf{C} $, mais ou menos na forma canônica de Jordan~\cite{chen1995linear}, tempo de assentamento requerido $t_{\mathrm{sr}}$ e porcentagem de sobressinal requerido $PO_{\mathrm{r}}$. Todos os benchmarks apresentam a matriz de espaço de estados $ D = [0] $ e foram escolhidos porque abordam diferentes cenários em relação a autovalores de $ \mathbf{A} $. Existem sistemas de $ 2\textsuperscript{nd} $, $ 3\textsuperscript{rd} $, $ 4\textsuperscript{th} $ e $ 5\textsuperscript{th} $ ordem e um de auta ordem ($ 17\textsuperscript{th} $), com autovalores iguais,  diferentes, reais e complexos. Além disso, dois deles são exemplos do mundo real: o 15 representa uma planta física real de um motor DC e o 16 descreve uma planta física de levitação magnética. Além disso, o benchmark 17 é um sistema de $ 17\textsuperscript{th} $ ordem baseado no fornecido por \cite{tran2016large} e depois discretizado. Os benchmarks utilizados em nosso estudo não contêm sistemas MIMO (multiple-input multiple-output), uma vez que a metodologia proposta é capaz de verificar apenas os SISO, no momento.
 
@@ -41,11 +41,11 @@ A Tabela~\ref{table:results} resume os resultados experimentais. ``\textbf{\#}''
 \textbf{\#}       & \multicolumn{9}{c|}{\textbf{Tempo de Assentamento}}                                                                                                                               & \multicolumn{9}{c|}{\textbf{Sobressinal}}                                                                                                                                         & \multicolumn{9}{c|}{\textbf{Tempo de Assentamento e Sobressinal}}                                                                                                        \\ \hline
 \multirow{2}{*}{} & \multicolumn{3}{c|}{\textit{$\langle 4,4 \rangle $}}      & \multicolumn{3}{c|}{\textit{$\langle 8,8 \rangle $}}      & \multicolumn{3}{c|}{\textit{$\langle 16,16 \rangle $}}    & \multicolumn{3}{c|}{\textit{$\langle 4,4 \rangle $}}      & \multicolumn{3}{c|}{\textit{$\langle 8,8 \rangle $}}      & \multicolumn{3}{c|}{\textit{$\langle 16,16 \rangle $}}    & \multicolumn{3}{c|}{$\langle 4,4 \rangle $}      & \multicolumn{3}{c|}{\textit{$\langle 8,8 \rangle $}}      & \multicolumn{3}{c|}{\textit{$\langle 16,16 \rangle $}}    \\ \cline{2-28} 
                   & \textit{\textbf{R}} & \textit{\textbf{T}} & \textit{\textbf{t}} & \textit{\textbf{R}} & \textit{\textbf{T}} & \textit{\textbf{t}} & \textit{\textbf{R}} & \textit{\textbf{T}} & \textit{\textbf{t}} & \textit{\textbf{R}} & \textit{\textbf{T}} & \textit{\textbf{t}} & \textit{\textbf{R}} & \textit{\textbf{T}} & \textit{\textbf{t}} & \textit{\textbf{R}} & \textit{\textbf{T}} & \textit{\textbf{t}} & \textit{\textbf{R}} & \textit{\textbf{T}} & \textit{\textbf{t}} & \textit{\textbf{R}} & \textit{\textbf{T}} & \textit{\textbf{t}} & \textit{\textbf{R}} & \textit{\textbf{T}} & \textit{\textbf{t}} \\ \hline
-1                 &          S          &          1           &                &          S          &       1        &                &          S          &          3           &                &                    &                     &                &                    &                     &                &                    &                     &                &           &                     &                &                    &                     &                &                    &                     &                \\ \hline
-2                 &          S          &           1          &                &          S          &        1       &                &          S          &          4           &                &                    &                     &                &                    &                     &                &                    &                     &                &           &                     &                &                    &                     &                &                    &                     &                \\ \hline
-3                 &          S          &           1          &                &          S          &        2        &                &          S          &          2           &                &                    &                     &                &                    &                     &                &                    &                     &                &           &                     &                &                    &                     &                &                    &                     &                \\ \hline
-4                 &          S          &           1          &                &          S          &        1        &                &          S          &          1           &                &                    &                     &                &                    &                     &                &                    &                     &                &           &                     &                &                    &                     &                &                    &                     &                \\ \hline
-5                 &          S          &           1          &                &          S          &        1        &                &          S          &          7           &                &                    &                     &                &                    &                     &                &                    &                     &                &           &                     &                &                    &                     &                &                    &                     &                \\ \hline
+1                 &          S          &          1           &                &          S          &       1        &                &          S          &          3           &                &                    &                     &                &                    &                     &                &                    &                     &                &     S      &        1             &                &          S          &          1           &                &          S          &           3          &                \\ \hline
+2                 &          S          &           1          &                &          S          &        1       &                &          S          &          4           &                &                    &                     &                &                    &                     &                &                    &                     &                &     S      &        1             &                &           S         &            1         &                &           S         &         4            &                \\ \hline
+3                 &          S          &           1          &                &          S          &        2        &                &          S          &          2           &                &                    &                     &                &                    &                     &                &                    &                     &                &     S      &        1             &                &           S         &            2         &                &           S         &         2            &                \\ \hline
+4                 &          S          &           1          &                &          S          &        1        &                &          S          &          1           &                &                    &                     &                &                    &                     &                &                    &                     &                &     S      &        1             &                &           S         &            1         &                &           S         &         1            &                \\ \hline
+5                 &          S          &           1          &                &          S          &        1        &                &          S          &          7           &                &                    &                     &                &                    &                     &                &                    &                     &                &     S      &        1             &                &           S         &            1         &                &           S         &         7            &                \\ \hline
 6                 &          S          &           1          &                &          S          &        5        &                &          S          &          41           &                &                    &                     &                &                    &                     &                &                    &                     &                &           &                     &                &                    &                     &                &                    &                     &                \\ \hline
 7                 &          S          &           1          &                &          S          &        1        &                &          S          &          1           &                &                    &                     &                &                    &                     &                &                    &                     &                &           &                     &                &                    &                     &                &                    &                     &                \\ \hline
 8                 &          S          &           1          &                &          S          &        1        &                &          S          &          3           &                &                    &                     &                &                    &                     &                &                    &                     &                &           &                     &                &                    &                     &                &                    &                     &                \\ \hline
