--- a/1_introduction/introduction.tex
+++ b/1_introduction/introduction.tex
@@ -4,18 +4,18 @@ Um sistema de controle digital consiste de sensores, sistema controlado, algorit
 O desenvolvimento de controladores digitais é uma tarefa fundamental na engenharia de controle, uma vez que eles são rotineiramente usados para muitas aplicações diferentes, que vão desde a indústria até no ramo aeroespacial~\cite{simons1994levers}.
 
 A teoria de controle digital visa preservar algumas propriedades baseadas em modelos de tempo discreto, por exemplo, estabilidade e robustez, que são necessárias para a operação correta de plantas reais através de um controlador digital. Controlar sistemas contínuos usando controladores digitais levanta problemas típicos de sistemas híbridos.
-Além disso, arredondamento e quantização de amostras e coeficientes em controladores digitais, devido a implementações de comprimento de palavras finitas (\textit{finite word length} - FWL), podem levar a \textit{overflow}, oscilação de ciclo limite e sensibilidade a polos e zeros, o que pode causar instabilidade do sistema e degradação do desempenho~\cite{istepanian2012digital,BessaICF16,bessa2017formal}. De fato, esse tipo de sensibilidade é chamado de fragilidade~\cite{keel1997robust} e é importante para o projeto de sistemas de controle, uma vez que está diretamente relacionado à sua robustez. Na literatura, existem alguns estudos relacionados que consideram perturbações nas implementações de sistemas de controle; Yordanov et al. \cite{yordanov2012temporal} considera pequenas perturbações nas entradas aplicadas em um sistema dinâmico para a síntese de uma estratégia de controle de realimentação para um sistema de afinidade por partes (PWA) em tempo discreto a partir de uma especificação dada como uma fórmula de lógica linear temporal (LTL) sobre um conjunto de predicados lineares nas variáveis de estado do sistema.
+Além disso, arredondamento e quantização de amostras e coeficientes em controladores digitais, devido a implementações de comprimento de palavras finitas (\textit{finite word length} - FWL), podem levar a \textit{overflow}, oscilação de ciclo limite e sensibilidade a polos e zeros, o que pode causar instabilidade do sistema e degradação do desempenho~\cite{istepanian2012digital,BessaICF16,bessa2017formal}. De fato, esse tipo de sensibilidade é chamado de fragilidade~\cite{keel1997robust} e é importante para o projeto de sistemas de controle, uma vez que está diretamente relacionado à sua robustez. Na literatura, existem alguns estudos relacionados que consideram perturbações nas implementações de sistemas de controle; Yordanov \textit{et al.} \cite{yordanov2012temporal} considera pequenas perturbações nas entradas aplicadas em um sistema dinâmico para a síntese de uma estratégia de controle de realimentação para um sistema de afinidade por partes (PWA) em tempo discreto a partir de uma especificação dada como uma fórmula de lógica linear temporal (LTL) sobre um conjunto de predicados lineares nas variáveis de estado do sistema.
 
-Algumas iniciativas que utilizam a verificação formal aplicada a sistemas de controle dinâmicos foram desenvolvidas nos últimos anos. Por exemplo, Bessa et al. \cite{bessa2017formal} apresentam um método de verificação para determinar a estabilidade incerta do sistema linear em relação aos controladores digitais, levando em conta aspectos de implementação, enquanto Wang et al., ampliam as técnicas tradicionais de verificação para implementação de controladores digitais, com o objetivo de abordar a validação da robustez no modelo e no nível de código. Abreu et al. \cite{abreu2016bounded} desenvolvem um método para verificar filtros digitais relativos a \textit{overflow} e ruído indesejado, que são causados por efeitos de quantização e arredondamento, e Belta~\cite{belta2014formal} verificaram a estabilidade em sistemas dinâmicos. Além disso, Racchetti et al.\cite{racchetti2015verification} geraram sequências de teste a partir de diagramas temporais de especificações de \textit{software} e as executaram em tempo real, verificou-se parte de sua conformidade, salvou-se contornos de teste e analisou-os automaticamente através de um método de verificação.
-Nilsson et al.~\cite{nilsson2016correct} aplicam métodos formais de controle de cruzeiro adaptativo e executa síntese de controlador que é correta por construção.
+Algumas iniciativas que utilizam a verificação formal aplicada a sistemas de controle dinâmicos foram desenvolvidas nos últimos anos. Por exemplo, Bessa \textit{et al.} \cite{bessa2017formal} apresentam um método de verificação para determinar a estabilidade incerta do sistema linear em relação aos controladores digitais, levando em conta aspectos de implementação, enquanto Wang \textit{et al.}, ampliam as técnicas tradicionais de verificação para implementação de controladores digitais, com o objetivo de abordar a validação da robustez no modelo e no nível de código. Abreu \textit{et al.} \cite{abreu2016bounded} desenvolvem um método para verificar filtros digitais relativos a \textit{overflow} e ruído indesejado, que são causados por efeitos de quantização e arredondamento, e Belta~\cite{belta2014formal} verificaram a estabilidade em sistemas dinâmicos. Além disso, Racchetti \textit{et al.}~\cite{racchetti2015verification} geraram sequências de teste a partir de diagramas temporais de especificações de \textit{software} e as executaram em tempo real, verificou-se parte de sua conformidade, salvou-se contornos de teste e analisou-os automaticamente através de um método de verificação.
+Nilsson \textit{et al.}~\cite{nilsson2016correct} aplicam métodos formais de controle de cruzeiro adaptativo e executa síntese de controlador que é correta por construção.
 
 Em sistemas de controle, parâmetros de resposta a degraus são comumente usados para especificar um elemento de controle, a fim de indicar que um sistema de controle de malha fechada é seguro em relação às suas especificações de desempenho, ou seja, quando sua resposta ao degrau atende, por exemplo, especificações de tempo assentamento e sobressinal~\cite{franklin1998digital}.
  %
 No entanto, existem alguns estudos relacionados que abordam parâmetros de desempenho com métodos formais.
-Nesse sentido, Gross et al. apresentam uma abordagem para formalizar requisitos comuns de sistemas de controle de atitude de naves espaciais, onde os tempos de assentamento são verificados através de testes de hipóteses \cite{gross2017formal}; Jin et al. propõem uma estrutura baseada em métodos formais para capturar requisitos de modelos em malha fechada de sistemas de controle em escala industrial, incluindo tempo de assentamento e sobressinal \cite{jin2015mining}.
+Nesse sentido, Gross \textit{et al.} apresentam uma abordagem para formalizar requisitos comuns de sistemas de controle de atitude de naves espaciais, onde os tempos de assentamento são verificados através de testes de hipóteses \cite{gross2017formal}; Jin \textit{et al.} propõem uma estrutura baseada em métodos formais para capturar requisitos de modelos em malha fechada de sistemas de controle em escala industrial, incluindo tempo de assentamento e sobressinal \cite{jin2015mining}.
 De fato, dado que perturbações ou mudanças em entradas pode levar a oscilações transitórias em saídas, é importante que estes últimos estejam dentro da região de assentamento, isto é, uma área especificando os desvios tolerados de uma dada referência, dentro de um tempo de assentamento especificado, e os sobressinais são menores do que um valor máximo requerido~\cite{jin2015mining}.
 
-Também é importante reforçar que os efeitos FWL realmente têm um grande impacto no comportamento do sistema~\cite{istepanian2012digital}. Geralmente, os controladores são fortemente influenciados por ligeira imprecisão (por exemplo, erro de arredondamento e quantização), o que, em alguns casos, pode até levar à instabilidade. De fato, quando implementamos um sistema de controle em uma plataforma realista (microcontroladores/microprocessadores), inevitavelmente lidamos com efeitos FLW, incluindo quantização de todos os valores numéricos (somas e produtos) e sinais de entrada, que afetam notavelmente os polos e zeros (localização) \cite{li1997pole}.
+Também é importante reforçar que os efeitos FWL têm um grande impacto no comportamento do sistema~\cite{istepanian2012digital}. Geralmente, os controladores são fortemente influenciados por ligeiras imprecisões (por exemplo, erro de arredondamento e quantização), o que, em alguns casos, pode até levar à instabilidade. De fato, quando implementamos um sistema de controle em uma plataforma física (microcontroladores/microprocessadores), inevitavelmente lidamos com efeitos FLW, incluindo quantização de todos os resultados aritméticos (somas e produtos) e sinais de entrada, que afetam notavelmente alocalização dos polos e zeros~\cite{li1997pole}.
 
 Como consequência, isso leva a um comportamento diferente, quando comparado com os requisitos de projeto, como se pode perceber ao longo deste trabalho e seus resultados. Além disso, vale notar que o tempo de assentamento e o sobressinal são requisitos típicos de projeto de sistemas de controle, o que leva a um comportamento específico de um sistema em desenvolvimento, juntamente com uma metodologia específica. Eles também são extremamente relacionados uns com os outros, embora sejam geralmente objetivos conflitantes~\cite{franklin1998digital}.
 
